<resources>
    <string name="app_name">MobileLegendHeroList</string>
    <string name="about_string">About</string>
    <string name="nama">Baihaqi Asshiddiqie</string>
    <string name="email">asidiqibaihaqi@gmail.com</string>
    <string name="heroes_name">List Heroes</string>
    <string name="description">Deskripsi Hero</string>
    <string name="home">List Heroes</string>
    <string name="profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="skill_a">skill_a</string>
    <string name="skill_b">Skill_b</string>
    <string name="skill_c">skill_c</string>
    <string name="lore">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias aliquam assumenda dolorem earum eligendi enim eum excepturi, exercitationem expedita fugiat, id impedit ipsa magnam maiores odit, officia optio provident quaerat quas quasi quis quod quos sed sint sit velit voluptas. Accusamus aut autem beatae, consectetur consequatur deleniti dicta dignissimos dolor dolore, dolores earum est et eum expedita inventore laborum laudantium libero minima minus modi molestiae non nulla officia perspiciatis quae quis quod rerum suscipit tempora voluptas? Adipisci architecto blanditiis debitis dolores eos excepturi facilis hic laudantium libero minima nesciunt, nihil nisi odit optio quasi recusandae sequi tenetur totam unde.</string>
    <string name="skill">List Skill</string>
    <string-array name="data_name">
        <item>Balmond</item>
        <item>Baxia</item>
        <item>Beatrix</item>
        <item>Chou</item>
        <item>Edith</item>
        <item>Faramis</item>
        <item>Paquito</item>
        <item>Pharsa</item>
        <item>Terizla</item>
        <item>Valentina</item>
        <item>WanWan</item>
        <item>Xavier</item>
        <item>Yin</item>
        <item>Yve</item>
    </string-array>
    <string-array name="data_description">
        <item>Bloody Beast</item>
        <item>Mystic Tortoise</item>
        <item>Dawnbreak Soldier</item>
        <item>Kung Fu Boy</item>
        <item>Forsaken Warden</item>
        <item>The Soul Binder</item>
        <item>The Heavenly Fist</item>
        <item>Crimson Mage</item>
        <item>The Executioner</item>
        <item>The Prophetess of the Night</item>
        <item>The Agile Tiger</item>
        <item>The Defier of Light</item>
        <item>The Martial Genius</item>
        <item>the Astrowarden</item>
    </string-array>
</resources>